k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi-service
  namespace: nifi
spec:
  selector:
    app: nifi
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  type: ClusterIP
